# tmux-manager

./: Cargo.toml  shell.nix  test.yml
src/: main.rs
src/config/: mod.rs  pane.rs  session.rs  traits.rs  window.rs
