[package]
name = "tmux-manager"
version = "0.1.0"
authors = ["Quentin Guilloteau <Quentin.Guilloteau@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "*"
dirs = "3.0.1"
